@@ -6,25 +6,22 @@ import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.boot.test.util.TestPropertyValues;
-import org.springframework.context.ApplicationContextInitializer;
-import org.springframework.context.ConfigurableApplicationContext;
-import org.springframework.mock.web.MockMultipartFile;
-import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.core.io.Resource;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.DynamicPropertyRegistry;
+import org.springframework.test.context.DynamicPropertySource;
 import org.springframework.util.DigestUtils;
-import org.springframework.web.multipart.MultipartFile;
-import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.MySQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
-import ru.minikhanov.cloud_storage.CloudStorageApplication;
-import ru.minikhanov.cloud_storage.Utils.MockUserUtils;
+//import ru.minikhanov.cloud_storage.Utils.Initializer;
+import ru.minikhanov.cloud_storage.Utils.Initializer;
 import ru.minikhanov.cloud_storage.exceptions.StorageException;
 import ru.minikhanov.cloud_storage.models.EntityFile;
+import ru.minikhanov.cloud_storage.models.FileStorageProperties;
 import ru.minikhanov.cloud_storage.models.security.ERole;
 import ru.minikhanov.cloud_storage.models.security.Role;
 import ru.minikhanov.cloud_storage.models.security.User;
@@ -35,39 +32,28 @@ import ru.minikhanov.cloud_storage.security.services.UserDetailsImpl;
 import ru.minikhanov.cloud_storage.service.AuthService;
 import ru.minikhanov.cloud_storage.service.StorageService;
 
-import javax.persistence.EntityManager;
-import javax.persistence.Transient;
 import javax.transaction.Transactional;
-import java.io.BufferedInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDate;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 @SpringBootTest
-@ContextConfiguration(initializers = {StorageServiceTests.Initializer.class})
+@ContextConfiguration(initializers = {Initializer.class})
 @Testcontainers
 @Transactional
 public class StorageServiceTests {
     @Container
-    private static MySQLContainer<?> mySQLContainer = new MySQLContainer<>("mysql:8")
+    public static MySQLContainer<?> mySQLContainer = new MySQLContainer<>("mysql:8")
             .withDatabaseName("mydb")
             .withUsername("user")
             .withPassword("pass");
-
-    static class Initializer implements ApplicationContextInitializer<ConfigurableApplicationContext> {
-        public void initialize(ConfigurableApplicationContext configurableApplicationContext) {
-            TestPropertyValues.of(
-                    "spring.datasource.url=jdbc:mysql://localhost:"+ mySQLContainer.getFirstMappedPort()+"/mydb?createDatabaseIfNotExist=true",
-                    "spring.datasource.username=" + mySQLContainer.getUsername(),
-                    "spring.datasource.password=" + mySQLContainer.getPassword()
-                    //"spring.datasource.url=jdbc:mysql://localhost:3306/testdb?createDatabaseIfNotExist=true"
-            ).applyTo(configurableApplicationContext.getEnvironment());
-        }
-    }
 
     @Autowired
     private StorageService storageService;
@@ -77,48 +63,61 @@ public class StorageServiceTests {
     private UserRepository userRepository;
     @Autowired
     private RoleRepository roleRepository;
-    @Autowired
-    private EntityManager entityManager;
     @MockBean
     private AuthService authServiceMock;
-    @Autowired
-    private static MockUserUtils mockUserUtils;
+    @MockBean
+    private FileStorageProperties rootPathMock;
     private static List<EntityFile> entityFileList = new ArrayList<>();
     private static User user = new User();
-    private static UserDetailsImpl userDetails;
-    private static Authentication authentication;
+    private static final String ROOT_PATH = "storage_test";
 
 
+    @DynamicPropertySource
+    static void mySQLContainerProperties(DynamicPropertyRegistry registry){
+        registry.add("spring.datasource.url", mySQLContainer::getJdbcUrl);
+        registry.add("spring.datasource.password", mySQLContainer::getPassword);
+        registry.add("spring.datasource.username", mySQLContainer::getUsername);
+    }
     @BeforeAll
     public static void createData() {
-
-        //user=mockUserUtils.addTestUser("testUser", "testPassword");
         EntityFile entityFile1 = EntityFile.builder().fileName("testFileName1.txt").fileSize(1L).hash("1").uploadDate(LocalDate.now()).build();
         EntityFile entityFile2 = EntityFile.builder().fileName("testFileName2.txt").fileSize(2L).hash("2").uploadDate(LocalDate.now()).build();
         EntityFile entityFile3 = EntityFile.builder().fileName("testFileName3.txt").fileSize(3L).hash("3").uploadDate(LocalDate.now()).build();
         entityFileList.add(entityFile1);
         entityFileList.add(entityFile2);
         entityFileList.add(entityFile3);
-        userDetails = UserDetailsImpl.build(user);
-        //LoginRequest loginRequest = new LoginRequest(user.getLogin(), user.getPassword());
-        authentication = new UsernamePasswordAuthenticationToken(userDetails, null);
+        UserDetailsImpl userDetails = UserDetailsImpl.build(user);
+        Authentication authentication = new UsernamePasswordAuthenticationToken(userDetails, null);
         SecurityContextHolder.getContext().setAuthentication(authentication);
+    }
+
+    @BeforeEach
+    public void createUser() {
+        String login = "testUser";
+        String password = "testPassword";
+        Role role = roleRepository.save(new Role(ERole.ROLE_TEST));
+        User newUser = User.builder().login(login).password(password).enabled(false).build();
+        Set<Role> roles = new HashSet<>();
+        roles.add(role);
+        newUser.setRole(roles);
+        user = userRepository.save(newUser);
+    }
+
+    @AfterEach
+    public void delDir() throws IOException {
+        Path pathDir = Path.of(ROOT_PATH, user.getLogin());
+        FileUtils.deleteQuietly(pathDir.toFile());
+    }
+    @AfterAll
+    public static void stopContainer(){
+        mySQLContainer.stop();
     }
 
     @Test
     @DisplayName("Get files by user")
     public void getAllFilesTest() {
-        String login = "testUser";
-        String password = "testPassword";
-        Role role = roleRepository.save(new Role(ERole.ROLE_TEST));
-        User user=User.builder().login(login).password(password).enabled(false).build();
-        Set<Role> roles = new HashSet<>();
-        roles.add(role);
-        user.setRole(roles);
-        //user= userRepository.save(user);
-        User userFromDb = userRepository.save(user);
         for (EntityFile file : entityFileList) {
-            file.setUser(userFromDb);
+            file.setUser(user);
         }
         storageRepository.saveAll(entityFileList);
         Mockito.when(authServiceMock.getUser()).thenReturn(user);
@@ -127,99 +126,87 @@ public class StorageServiceTests {
     }
 
     @Test
-    @DisplayName("Check file hex")
-    public void checkHexTest() {
-        MockMultipartFile multipartFile = new MockMultipartFile("file", "test.txt", "text/plane", "Spring Framework".getBytes());
-        String md5Hex;
-        String badmd5Hex = "a";
-        try {
-            md5Hex = DigestUtils.md5DigestAsHex(new BufferedInputStream(multipartFile.getInputStream()));
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-        Throwable throwable = Assertions.assertThrows(StorageException.class, ()->{storageService.checkHex(badmd5Hex, multipartFile);});
-        Assertions.assertTrue(storageService.checkHex(md5Hex, multipartFile));
-        Assertions.assertNotNull(throwable);
-    }
-
-    @Test
     @DisplayName("Get file by name")
     public void getFileByNameTest() throws IOException {
         Path pathDir = null;
         Path pathFile;
         try {
-            pathDir = Path.of(CloudStorageApplication.PATH + user.getLogin());
+            pathDir = Path.of(ROOT_PATH, user.getLogin());
             if (!Files.exists(pathDir)) {
                 Files.createDirectories(pathDir);
             }
             pathFile = Files.createFile(Path.of(String.valueOf(pathDir), "myTestFile.tmp"));
             Files.write(pathFile, "test test test".getBytes());
             Mockito.when(authServiceMock.getUser()).thenReturn(user);
-            Map<String, String> fileInfo = storageService.getFileByName("myTestFile.tmp");
-            System.out.println(fileInfo);
-            Assertions.assertTrue(fileInfo.containsKey("file"));
-            Assertions.assertTrue(fileInfo.containsKey("hash"));
+            Mockito.when(rootPathMock.getUploadDir()).thenReturn(ROOT_PATH);
+            Resource resource = storageService.getFileByName("myTestFile.tmp");
+            Assertions.assertTrue(resource.isFile());
+            Assertions.assertEquals("myTestFile.tmp", resource.getFilename());
+            Files.deleteIfExists(pathFile);
+            Assertions.assertThrows(StorageException.class, () -> {
+                storageService.getFileByName("myTestFile.tmp");
+            });
         } catch (IOException e) {
             throw new RuntimeException(e);
-        } finally {
-            FileUtils.deleteDirectory(pathDir.toFile());
         }
     }
 
     @Test
-    @DisplayName("delete file if not exist in storage")
-    public void deleteFileIfNotInStorageTest(){
-        String login = "testUser";
-        String password = "testPassword";
-        Role role = roleRepository.save(new Role(ERole.ROLE_TEST));
-        User user=User.builder().login(login).password(password).enabled(false).build();
-        Set<Role> roles = new HashSet<>();
-        roles.add(role);
-        user.setRole(roles);
-        user= userRepository.save(user);
-        User receiveUser = userRepository.save(user);
-        for (EntityFile file : entityFileList) {
-            file.setUser(receiveUser);
-        }
-        storageRepository.saveAll(entityFileList);
-        Mockito.when(authServiceMock.getUser()).thenReturn(receiveUser);
-        Assertions.assertThrows(StorageException.class, ()->{storageService.deleteFile("testFileName1.txt");});
-
-        //Assertions.assertThrows(StorageException.class, ()->{storageService.deleteFile("testFileName1.txt");});
-    }
-    @Test
-    @DisplayName("delete file if exist in storage")
-    public void deleteFileIfInStorageTest(){
-        String login = "testUser";
-        String password = "testPassword";
-        Role role = roleRepository.save(new Role(ERole.ROLE_TEST));
-        User user=User.builder().login(login).password(password).enabled(false).build();
-        Set<Role> roles = new HashSet<>();
-        roles.add(role);
-        user.setRole(roles);
-        user= userRepository.save(user);
+    @DisplayName("delete file from DB and storage")
+    public void deleteFileTest() throws IOException {
         String deleteFile = "testFileName1.txt";
-        //User receiveUser = userRepository.save(user);
         for (EntityFile file : entityFileList) {
             file.setUser(user);
         }
         storageRepository.saveAll(entityFileList);
         Mockito.when(authServiceMock.getUser()).thenReturn(user);
+        Mockito.when(rootPathMock.getUploadDir()).thenReturn(ROOT_PATH);
         Path dir;
         Path file;
-        try {
-            dir = Files.createDirectories(Path.of(CloudStorageApplication.PATH, user.getLogin()));
-            file = Files.createFile(Paths.get(CloudStorageApplication.PATH, user.getLogin(), deleteFile));
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-        System.out.println(user);
+
+        dir = Files.createDirectories(Path.of(ROOT_PATH, user.getLogin()));
+        file = Files.createFile(Paths.get(ROOT_PATH, user.getLogin(), deleteFile));
+
         storageService.deleteFile(deleteFile);
         FileUtils.deleteQuietly(dir.toFile());
-        Assertions.assertFalse(storageRepository.findById(entityFileList.get(1).getId()).get().getFileName().equals(deleteFile));
-        /*Assertions.assertTrue(Files.exists());*/
-        System.out.println(mySQLContainer);
-        Assertions.assertThrows(StorageException.class, ()->{storageService.deleteFile("testFileName1.txt");});
+        Assertions.assertFalse(storageRepository.findById(entityFileList.get(0).getId()).isPresent());
+        Assertions.assertFalse(Files.isReadable(file));
+    }
 
+    @Test
+    @DisplayName("Hex from file")
+    public void getHexTest() throws IOException {
+        Path dir = Files.createDirectories(Path.of(ROOT_PATH, user.getLogin()));
+        Path file = Files.createFile(Paths.get(ROOT_PATH, user.getLogin(), "myTestFile.tmp"));
+        Files.write(file, "test test test".getBytes());
+        Mockito.when(authServiceMock.getUser()).thenReturn(user);
+        Mockito.when(rootPathMock.getUploadDir()).thenReturn(ROOT_PATH);
+        Assertions.assertEquals(DigestUtils.md5DigestAsHex(Files.readAllBytes(file)), storageService.getHexFromFile("myTestFile.tmp"));
+        Files.deleteIfExists(file);
+        Assertions.assertThrows(StorageException.class, () -> {
+            storageService.getHexFromFile("myTestFile.tmp");
+        });
+    }
+
+    @Test
+    @DisplayName("Rename File")
+    public void renameFileTest() throws IOException {
+        String newName = "newName.txt";
+        for (EntityFile file : entityFileList) {
+            file.setUser(user);
+        }
+        List<EntityFile> filesFromDb = storageRepository.saveAll(entityFileList);
+        String oldName = filesFromDb.get(1).getFileName();
+        Mockito.when(authServiceMock.getUser()).thenReturn(user);
+        Mockito.when(rootPathMock.getUploadDir()).thenReturn(ROOT_PATH);
+        FileUtils.deleteDirectory(new File(ROOT_PATH, user.getLogin()));
+        Path dir = Files.createDirectories(Path.of(ROOT_PATH, user.getLogin()));
+        Path file = Files.createFile(Paths.get(ROOT_PATH, user.getLogin(), oldName));
+        Files.write(file, "test test test".getBytes());
+        storageService.renameFile(oldName, newName);
+        Assertions.assertTrue(Files.exists(Path.of(ROOT_PATH, user.getLogin(), newName)));
+        System.out.println(storageRepository.findAll());
+        Assertions.assertEquals(newName, storageRepository.getById(filesFromDb.get(1).getId()).getFileName());
+        Files.deleteIfExists(file);
     }
 }
